--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <main>
         <h1>To Do List</h1>
-        <input type="text" id="input-el" placeholder="Add a new task here...">
+        <input type="text" id="input-el" placeholder="Add a new task here..." maxlength="30">
         <button id="add-btn">
             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 512 512">
                 <path d="M496 192h-176v-176c0-8.836-7.164-16-16-16h-96c-8.836 0-16 7.164-16 16v176h-176c-8.836 0-16 7.164-16 16v96c0 8.836 7.164 16 16 16h176v176c0 8.836 7.164 16 16 16h96c8.836 0 16-7.164 16-16v-176h176c8.836 0 16-7.164 16-16v-96c0-8.836-7.164-16-16-16z"></path>
